--- a/Task1/src/Server/index.html
+++ b/Task1/src/Server/index.html
@@ -12,15 +12,15 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
-            background-color: #3d6e47;
+            margin: 20px;
+            background-color: #183059;
         }
 
         form {
-            background-color: rgba(112, 128, 144, 0.76);
+            background-color: #E6E6EA;
             padding: 40px;
             border-radius: 20px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.3);
         }
 
         label, input, button {
@@ -37,7 +37,7 @@
         }
 
         button {
-            background-color: gray;
+            background-color: #233D4D;
             color: white;
             cursor: pointer;
             border: none;
