--- a/Task2/index.html
+++ b/Task2/index.html
@@ -15,10 +15,8 @@
         <input type="text" id="name" name="name" required><br><br>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>
-        <label for="age">Age:</label>
-        <input type="number" id="age" name="age" required min="18"><br><br>
-        <label for="dob">Date of Birth:</label>
-        <input type="date" id="dob" name="dob" required><br><br>
+        <label for="github">Github URL:</label>
+        <input type="text" id="github" name="github" required><br><br>
         <label for="linkedin">Linkedin URL:</label>
         <input type="text" id="linkedin" name="linkedin" required><br><br>
         <button type="submit">Submit</button>
