--- a/Task2/Public/index.html
+++ b/Task2/Public/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-    <img id="logo" src="./Public/cognifyz-1.png" alt="cognifyzLogo">
+    <img id="logo" src="cognifyz-1.png" alt="cognifyzLogo">
     <h1 id="heading">Web Dev Internship<br> For B.Tech enrolled Students</h1>
     <form id="registrationForm" action="/submit-form" method="POST">
         <label for="name">Name:</label>
