--- a/Task4/index.html
+++ b/Task4/index.html
@@ -15,10 +15,10 @@
     </div>
 
     <div class="menu-section">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
+
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+
     </div>
 
 </nav>
