--- a/Task4/index.html
+++ b/Task4/index.html
@@ -26,15 +26,11 @@
 <div class="middle-section">
     <h1 id="heading">Web Dev Internship<br> For B.Tech enrolled Students</h1>
     <form id="registrationForm" action="/submit-form" method="POST">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br><br>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>
-        <label for="semid">Semester:</label>
-        <input type="number" id="semid" name="sem" required><br><br>
-        <label for="durationid">Internship Duration(MM):</label>
-        <input type="number" id="durationid" name="duration" required><br><br>
-        <button type="submit">Submit</button>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>        <br><br>
+        <button id="btn" type="submit">Sign up</button>
     </form>
 </div>
 
