--- a/Task4/index.html
+++ b/Task4/index.html
@@ -25,7 +25,7 @@
 
 <div class="middle-section">
     <h1 id="heading">Web Dev Internship<br> For B.Tech enrolled Students</h1>
-    <form id="registrationForm" action="/submit-form" method="POST">
+    <form id="registrationForm" action="/sign-up" method="POST">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>
         <label for="password">Password:</label>
